2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* .htaccess: error-description-source.xml is in UTF-8
	actually.

	* Makefile: Rule to make Japanese language catalog file
	is added.

	* cc-script.js: Line and column numbers are now taken
	from data-* attributes, not from textContent.

	* cc.cgi: Tentative support for Japanese/English conneg.
	(load_text_catalog, get_text): Removed (catalog text selection
	is now handled by WebHACC::Output).

	* error-description-source.xml: Catalog entries in new
	format are added.  Old catalog element is removed.

	* mkcatalog.pl: Support for non-English languages.
	Drop support for old catalog element.  Add support
	for new cat element.

	* mkdescription.pl: Drop support for old catalog element.
	Add support for new cat element.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Code clean-up.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Old commented out code for additional
	information sections are removed.  They are now
	implemented as part of |generate_add_info_sections| method.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (print_table_section): Removed (now part of 
	WebHACC::Language::DOM).

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Information sections are now handled by WebHACC::Input
	module.  Input objects for subdocuments now owns their
	own subclass.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Errors and results are now handled by WebHACC::Result.
	Decode |uri| parameter as UTF-8.  HTTP header dump and
	input error are now handled by WebHACC::Input.

2008-07-20  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Modularized.

	* WebHACC/: New directory.

2008-07-18  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (print_structure_dump_webidl_section): Use ->idl_text
	for dummping (Data::Dumper::Dumper no longer used).

2008-05-18  Wakaba  <wakaba@suika.fam.cx>

	* LICENSE: Note on icons/*.png are added.

	* icons/: New directory.

	* cc-style.css: Rules for background images on error category