@@ -1,3 +1,12 @@
+2008-07-26  Wakaba  <wakaba@suika.fam.cx>
+
+	* cc.cgi: get_input_document function is now handled
+	by WebHACC::Input classes.  |cc-script| reference
+	is now generated by |html_header| in WebHACC::Output.
+
+	* error-description-source.xml: Document URL and Request URL
+	are now just "URLs".
+
 2008-07-21  Wakaba  <wakaba@suika.fam.cx>
 
 	* .htaccess: error-description-source.xml is in UTF-8
